syntax = "proto3";
package symphony.gamm.v1beta1;

import "gogoproto/gogo.proto";
import "symphony/gamm/v1beta1/genesis.proto";
import "symphony/gamm/v1beta1/shared.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/gamm/types";

// ReplaceMigrationRecordsProposal is a gov Content type for updating the
// migration records. If a ReplaceMigrationRecordsProposal passes, the
// proposalâ€™s records override the existing MigrationRecords set in the module.
// Each record specifies a single connection between a single balancer pool and
// a single concentrated pool.
message ReplaceMigrationRecordsProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (amino.name) = "symphony/ReplaceMigrationRecordsProposal";
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1;
  string description = 2;
  repeated BalancerToConcentratedPoolLink records = 3
      [ (gogoproto.nullable) = false ];
}

// UpdateMigrationRecordsProposal is a gov Content type for updating the
// migration records. If a UpdateMigrationRecordsProposal passes, all the
// MigrationRecords in the proposals are edited. An existing
// BalancerToConcentratedPoolLink is not overridden unless explicitly included
// in the proposal. This differs from a ReplaceMigrationRecordsProposal because
// it only does an in place update of the MigrationRecords for records
// explicitly mentioned in the proposal.

// Lastly, if the clPoolId is set to 0, the BalancerToConcentratedPoolLink is
// deleted

// For example: if the existing DistrRecords were:
// [(Balancer 1, CL 5), (Balancer 2, CL 6), (Balancer 3, CL 7)]
// And an UpdateMigrationRecordsProposal includes
// [(Balancer 2, CL 0), (Balancer 3, CL 4), (Balancer 4, CL 10)]
// This would leave Balancer 1 record, delete Balancer 2 record,
// Edit Balancer 3 record, and Add Balancer 4 record
// The result MigrationRecords in state would be:
// [(Balancer 1, CL 5), (Balancer 3, CL 4), (Balancer 4, CL 10)]
message UpdateMigrationRecordsProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (amino.name) = "symphony/UpdateMigrationRecordsProposal";
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1;
  string description = 2;
  repeated BalancerToConcentratedPoolLink records = 3
      [ (gogoproto.nullable) = false ];
}
message PoolRecordWithCFMMLink {
  option (gogoproto.equal) = true;

  string denom0 = 1 [ (gogoproto.moretags) = "yaml:\"denom0\"" ];
  string denom1 = 2 [ (gogoproto.moretags) = "yaml:\"denom1\"" ];
  uint64 tick_spacing = 3 [ (gogoproto.moretags) = "yaml:\"tick_spacing\"" ];
  string exponent_at_price_one = 4 [

    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"exponent_at_price_one\"",
    (gogoproto.nullable) = false
  ];
  string spread_factor = 5 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"spread_factor\"",
    (gogoproto.nullable) = false
  ];
  uint64 balancer_pool_id = 6
      [ (gogoproto.moretags) = "yaml:\"balancer_pool_id\"" ];
}

// CreateConcentratedLiquidityPoolsAndLinktoCFMMProposal is a gov Content type
// for creating concentrated liquidity pools and linking it to a CFMM pool.
message CreateConcentratedLiquidityPoolsAndLinktoCFMMProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (amino.name) =
      "symphony/CreateConcentratedLiquidityPoolsAndLinktoCFMMProposal";
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1;
  string description = 2;

  repeated PoolRecordWithCFMMLink pool_records_with_cfmm_link = 3 [
    (gogoproto.moretags) = "yaml:\"create_cl_pool_and_link_to_cfmm\"",
    (gogoproto.nullable) = false
  ];
}

// SetScalingFactorControllerProposal is a gov Content type for updating the
// scaling factor controller address of a stableswap pool
message SetScalingFactorControllerProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (amino.name) = "symphony/SetScalingFactorControllerProposal";
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1;
  string description = 2;
  uint64 pool_id = 3;
  string controller_address = 4;
}